# kitaabe

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/api/: openlibrary.rs
src/cli/: mod.rs
src/commands/: mod.rs  search.rs
src/models/: book.rs
