[package]
name = "kitaabe"
version = "0.1.0"
edition = "2021"
description = "CLI-first book exploration engine powered by OpenLibrary"
license = "MIT"
repository = "https://github.com/pavan2318/kitaabe"
readme = "README.md"
keywords = ["books", "cli", "openlibrary", "search"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
urlencoding = "2"
